lib_LTLIBRARIES = libag_list.la
libag_list_la_SOURCES = ag_doublelist.c ag_list.c ag_simplelist.c
libag_list_la_LDFLAGS = -version-info 0:0:0
include_HEADERS = \
    ag_doublelist.h \
    ag_doublelist_internal.h \
    ag_list.h \
    ag_list_internal.h \
    ag_simplelist.h \
    ag_simplelist_internal.h
